// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiline.yml 1`] = `
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: "
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

`;

exports[`multiline.yml 2`] = `
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: '
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  '
b: '
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  '

`;

exports[`multiline.yml 3`] = `
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: "
  123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

`;

exports[`multiline.yml 4`] = `
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: "
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

`;

exports[`quote.yml 1`] = `
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"

`;

exports[`quote.yml 2`] = `
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- '123'
- '123'
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"

`;

exports[`quote.yml 3`] = `
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"

`;

exports[`quote.yml 4`] = `
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"

`;
